# Ageis

./: .env.example  .gitignore  .npmrc  README.md  algokit.toml  build_log.txt  index.html  package-lock.json  package.json  supabase_schema.sql  tailwind.config.js  vite.config.js
agent/: aegis_agent.py  config.py
backend/: README.md  main.py  requirements.txt
contracts/: aegis_position.py  deploy.py  deploy_teal.py  pyproject.toml
scripts/: seed_testnet.py
src/: App.jsx  index.css  main.jsx
src/components/: APRComparisonChart.jsx  AddLiquidityModal.jsx  AgentPredictionPanel.jsx  AgentStatusPanel.jsx  ConfirmationModal.jsx  CreatePositionModal.jsx  DecisionEnginePanel.jsx  DecisionLogTable.jsx  DepositModal.jsx  FeeAccumulationChart.jsx  ILComparisonPanel.jsx  JoinPoolModal.jsx  LivePulse.jsx  MatrixRain.jsx  Navbar.jsx  NetPnLPanel.jsx  OnboardingModal.jsx  OutOfRangeAlert.jsx  PoolDepositorsPanel.jsx  PositionHealthGauge.jsx  PriceRangeChart.jsx  RebalanceHistoryTable.jsx  RebalanceTriggerButton.jsx  RemoveLiquidityModal.jsx  StatCard.jsx  ToastContainer.jsx  WalletConnectButton.jsx  WithdrawModal.jsx
src/hooks/: useCountUp.js  useDerivedStats.js  useLivePrice.js  usePosition.js  useWallet.js
src/pages/: Analytics.jsx  Dashboard.jsx  Landing.jsx  PoolSwap.jsx  Positions.jsx  Transactions.jsx
src/services/: algorandClient.js  apiService.js  contractService.js  indexerService.js  pnlCalculator.js  positionStore.js  supabaseClient.js  supabaseService.js  vestigeService.js
